<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_parking_fee_paid_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/round_black_empty"
    android:elevation="50dp">

    <TextView
        android:id="@+id/paid_bill_no_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/paid_no_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paid_plate_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/paid_plate_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paid_bill_no_title_textView" />

    <TextView
        android:id="@+id/paid_date_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/paid_date_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/paid_plate_title_textView"
        app:layout_constraintTop_toBottomOf="@+id/paid_plate_title_textView" />

    <TextView
        android:id="@+id/paid_fee_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/paid_fee_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/paid_date_title_textView"
        app:layout_constraintTop_toBottomOf="@+id/paid_date_title_textView" />

    <TextView
        android:id="@+id/paid_status_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/paid_status_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/paid_fee_title_textView"
        app:layout_constraintTop_toBottomOf="@+id/paid_fee_title_textView" />

    <TextView
        android:id="@+id/paid_bill_no_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/paid_bill_no_title_textView"
        app:layout_constraintTop_toTopOf="@+id/paid_bill_no_title_textView" />


    <TextView
        android:id="@+id/paid_plate_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/paid_plate_title_textView"
        app:layout_constraintTop_toTopOf="@+id/paid_plate_title_textView" />

    <TextView
        android:id="@+id/paid_date_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/paid_date_title_textView"
        app:layout_constraintTop_toTopOf="@+id/paid_date_title_textView" />

    <TextView
        android:id="@+id/paid_fee_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/paid_fee_title_textView"
        app:layout_constraintTop_toTopOf="@+id/paid_fee_title_textView" />

    <TextView
        android:id="@+id/paid_status_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paid_status_title_textView"
        app:layout_constraintTop_toTopOf="@+id/paid_status_title_textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/paid_detail_materialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_primary_empty"
        android:text="@string/check_detail_title"
        android:textColor="@color/light_blue_A400"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>