<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.member.ForgetPasswordFragment">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/toolbar_include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forget_password_inner_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password_inner_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_include" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reset_content_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_inner_title_textView">

        <TextView
            android:id="@+id/forget_password_phone_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/forget_password_phone_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:paddingLeft="10dp"
            android:id="@+id/forget_password_phone_content_editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_gray_empty"
            android:gravity="center_vertical"
            android:hint="@string/phone_input_hint_title"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/c_aaaaaa_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_phone_title_textView" />

        <TextView
            android:id="@+id/forget_password_new_input_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/forget_password_new_input_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_phone_content_editText" />

        <EditText
            android:paddingLeft="10dp"
            android:id="@+id/forget_password_new_input_content_editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_gray_empty"
            android:gravity="center_vertical"
            android:hint="@string/password_new_input_hint_title"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/c_aaaaaa_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_new_input_title_textView" />

        <ImageView
            android:id="@+id/seePWD1"
            android:layout_marginRight="10dp"
            android:background="@drawable/eye"
            app:layout_constraintEnd_toEndOf="@+id/forget_password_new_input_content_editText"
            app:layout_constraintBottom_toBottomOf="@+id/forget_password_new_input_content_editText"
            app:layout_constraintTop_toTopOf="@+id/forget_password_new_input_content_editText"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/forget_password_new_confirm_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/forget_password_new_confirm_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_new_input_content_editText" />

        <EditText
            android:paddingLeft="10dp"
            android:id="@+id/forget_password_new_confirm_content_editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_gray_empty"
            android:hint="@string/password_new_confirm_hint_title"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/c_aaaaaa_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_new_confirm_title_textView" />

        <ImageView
            android:id="@+id/seePWD2"
            android:layout_marginRight="10dp"
            android:background="@drawable/eye"
            app:layout_constraintEnd_toEndOf="@+id/forget_password_new_confirm_content_editText"
            app:layout_constraintBottom_toBottomOf="@+id/forget_password_new_confirm_content_editText"
            app:layout_constraintTop_toTopOf="@+id/forget_password_new_confirm_content_editText"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_pass_word_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/green_button"
        android:text="送出"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_content_constraintLayout"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/member_update_password_cancel_button"
        android:layout_width="120dp"
        android:layout_marginTop="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_primary_empty"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/cancel_title"
        android:gravity="center"
        android:textColor="@color/c_1f98b0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_content_constraintLayout"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
